Fix: 원격협업 목록의 항목 리더이름 overflow 처리 추가

--- a/src/assets/style/workspace/workspace-remotecard.scss
+++ b/src/assets/style/workspace/workspace-remotecard.scss
@@ -212,14 +212,20 @@
       }
     }
 
-    .room-leader {
-      @include fontLevel(75);
-      margin-right: 0.8rem;
-      color: $new_color_text_sub;
-    }
-    .room-member {
-      @include fontLevel(75);
-      color: $new_color_text_blue; //@추가 color
+    .room-member-info {
+      display: flex;
+      width: 48vw;
+      .room-leader {
+        @include fontLevel(75);
+        width: 32vw;
+        margin-right: 0.8rem;
+        color: $new_color_text_sub;
+        @include ellipsis();
+      }
+      .room-member {
+        @include fontLevel(75);
+        color: $new_color_text_blue; //@추가 color
+      }
     }
   }
 
